Fix z-index

--- a/packages/block-library/src/blocks/sidecar/editor-styles.scss
+++ b/packages/block-library/src/blocks/sidecar/editor-styles.scss
@@ -390,3 +390,7 @@ $align-selectors: '[data-align="full"], [data-align="wide"], [data-novablocks-al
     
   }
 }
+
+[data-type="novablocks/sidecar-area"] {
+  z-index: 1;
+}
